[workspace]
members = [
  "common",
  "nrf52840",
  "python",
  "receiver",
]
default-members = ["common", "python", "receiver"]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4.38", default-features = false }
defmt = "1.0"
embassy-executor = { version = "0.9", features = ["executor-thread"] }
embassy-futures = "0.1.2"
embassy-nrf = { version = "0.8", features = ["defmt", "nrf52840", "time-driver-rtc1", "time", "nfc-pins-as-gpio"] }
embassy-sync = "0.7"
embassy-time = { version = "0.5" }
femtopb = { version = "0.8.0", features = ["thiserror"] }
geoutils = "0.5.1"
heapless = "0.9.1"
log = "0.4"
meshtastic = { git = "https://github.com/meshtastic/rust", rev = "70c0f7cf9aeaac00059546a68a04d04762ee78f5" }
thiserror = { version = "2.0.0", default-features = false }
tokio = { version = "1.44" }
tokio-serial = "5.4.5"

[profile.release]
debug = 2
overflow-checks = false
lto = true
codegen-units = 1
