# TODO: add more info, see https://github.com/pypa/sampleproject/blob/main/pyproject.toml
[project]
name = "yaroc"  # Required
version = "0.1"
authors = [
  {name = "Lukáš Poláček", email = "lukas@polacek.email" }
]
description = "Yet Another ROC"
keywords = ["orienteering", "online control"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  'pydbus==0.6.*; platform_system == "Linux"',
  'pyudev==0.24.*; platform_system == "Linux"',
  "paho-mqtt==1.6.*",
  "requests==2.28.*",
  "protobuf==4.22.*",
  "gpiozero==1.6.*",
  "psutil==5.9.*",
  "sportident",
]

[project.optional-dependencies] # Optional
dev = [
  "black",
  "flake8",
  "isort",
  "mypy",
  "Flake8-pyproject",
  "types-paho-mqtt",
  "types-protobuf",
  "types-psutil",
  "types-requests"
]
pylsp = [
  "pyls-flake8",
  "pyls-isort",
  "pylsp-mypy",
  "python-lsp-black",
]
test = ["pytest"]

[project.scripts]
mqtt-bench = "yaroc.scripts.mqtt_bench:main"
mqtt-forwarder = "yaroc.scripts.mqtt_forwarder:main"
send-punch = "yaroc.scripts.send_punch:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
exclude = ".git|.hg|.mypy_cache|.venv|_build|build|dist|_pb2.py"

[tool.flake8]
max-line-length = 100
exclude = "**/*_pb2.py"

[tool.isort]
include_trailing_comma = true
line_length = 100
multi_line_output = 3
skip_glob = "**/*_pb2.py,**/*_pb2.pyi"
