[project]
name = "yaroc"
version = "0.1.2"
authors = [
  {name = "Lukáš Poláček", email = "lukas@polacek.email" }
]
description = "Yet Another ROC"
keywords = ["orienteering", "online control"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  'aiohttp-retry==2.8.3',
  'aiohttp==3.8.4',
  'aiomqtt==1.2.*',
  'dbus-next==0.2.*; platform_system == "Linux"',
  'dependency-injector==4.41.*',
  'gpiozero==1.6.*',
  'meshtastic==2.2.*',
  'pillow==9.4.*',
  'protobuf==4.22.*',
  'psutil==5.9.*',
  'pyserial-asyncio==0.6',
  'pyudev==0.24.*; platform_system == "Linux"',
  'RPi.GPIO==0.7.1; platform_machine == "armv7l" or platform_machine == "aarch64"',
  'waveshare-epaper==1.2.0; platform_machine == "armv7l" or platform_machine == "aarch64"',
]

[project.optional-dependencies] # Optional
dev = [
  "ruff",
  "mypy",
  "types-Pillow",
  "types-protobuf",
  "types-psutil",
]
lsp = [
  "ruff-lsp",
  "pylsp-mypy",
]
test = ["pytest"]

[project.scripts]
mqtt-forwarder = "yaroc.scripts.mqtt_forwarder:main"
send-punch = "yaroc.scripts.send_punch:main"

[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "yaroc.rs"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
exclude = ["*_pb2.py", "*_pb2.pyi"]

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
