[package]
name = "yaroc-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
defmt = ["dep:defmt"]
nrf = ["dep:embassy-nrf"]
receive = ["std", "dep:meshtastic", "dep:geoutils"]
std = ["embassy-executor/arch-std", "embassy-time/std", "chrono/clock", "chrono/alloc"]

[dependencies]
chrono = { workspace = true }
defmt = { workspace = true, optional = true }
embassy-executor = { workspace = true }
embassy-futures = { workspace = true }
embassy-nrf = { workspace = true, optional = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
femtopb = { workspace = true }
geoutils = { workspace = true, optional = true }
heapless =  { workspace = true }
log = { workspace = true }
meshtastic = { workspace = true, optional = true }
thiserror = { workspace = true }

[build-dependencies]
femtopb-build = "0.5.0"

[dev-dependencies]
critical-section = { version = "1", features = ["std"]}
embassy-executor = { workspace = true }
embassy-futures = { workspace = true }
env_logger = "0.11.6"
static_cell = "2.1.0"
yaroc-common = { path = ".", features = ["receive"] } # 'receive' is activated for tests

[[test]]
name = "backoff"
required-features = ["std"]

[[test]]
name = "bg77_sysinfo"
required-features = ["std"]

[[test]]
name = "uart"
required-features = ["std"]
