[package]
name = "yaroc-common"
version = "0.1.0"
edition = "2024"

[features]
default = []
defmt = ["dep:defmt", "femtopb/defmt"]
nrf = ["dep:embassy-nrf"]
std = ["embassy-executor/arch-std", "embassy-time/std", "chrono/clock", "chrono/alloc", "dep:geoutils"]

[dependencies]
chrono = { workspace = true }
defmt = { workspace = true, optional = true }
embassy-executor = { workspace = true }
embassy-futures = { workspace = true }
embassy-nrf = { workspace = true, optional = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
femtopb = { workspace = true }
geoutils = { workspace = true, optional = true }
heapless =  { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
femtopb-build = "0.5.0"

[dev-dependencies]
chrono = { workspace = true, features = ["alloc"] }
critical-section = { version = "1", features = ["std"]}
env_logger = "0.11.6"
static_cell = "2.1.0"

[[test]]
name = "backoff"
required-features = ["std"]

[[test]]
name = "uart"
required-features = ["std"]
