[package]
name = "yaroc-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16", features = ["async", "serde-json", "napi4", "tokio_rt"] }
napi-derive = "2.16"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = "1.0"
yaroc-receiver = { path = "../receiver", default-features = false }
yaroc-common = { path = "../common", features = ["std"] }
chrono = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
futures = "0.3"
tokio-util = { workspace = true }

[build-dependencies]
napi-build = "2.0"
