[package]
name = "yaroc-napi"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
napi = { version = "2.16", features = ["async", "serde-json", "napi4", "tokio_rt"] }
napi-derive = "2.16"
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
yaroc-common = { path = "../common", features = ["std"] }
yaroc-receiver = { path = "../receiver", default-features = false }

[build-dependencies]
napi-build = "2.0"
