[package]
name = "yaroc-nrf52840"
version = "0.1.0"
authors = ["Lukáš Poláček <lukas@polacek.email>"]
resolver = "2"
rust-version = "1.90"
edition = "2024"

[features]
default = []

[dependencies]
yaroc-common = { path = "../common", features = ["defmt", "nrf"] }

defmt = { workspace = true }
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"

cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5.0"
embassy-embedded-hal = "0.5.0"
embassy-executor = { workspace = true, features = ["arch-cortex-m", "defmt", "executor-interrupt"] }
embassy-futures = { workspace = true, features = ["defmt"] }
embassy-nrf = { workspace = true, features = ["defmt"] }
embassy-sync = { workspace = true, features = ["defmt"] }
embassy-time = { workspace = true, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { workspace = true, features = ["defmt"] }
embassy-boot-nrf = { workspace = true, features = ["defmt", "softdevice"] }
embassy-usb-dfu = { workspace = true, features = ["defmt", "dfu"] }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "5949a5b1445cc907745c6449a35577e4544cd255", features = ["defmt", "nrf52840", "s140", "ble-peripheral", "critical-section-impl"]}
postcard = { workspace = true }
sequential-storage = "7.0"
serde = { workspace = true }

chrono = { workspace = true }
femtopb = { workspace = true }
heapless =  { workspace = true }
thiserror = { workspace = true }
static_cell = "2.1.1"
