[package]
name = "yaroc-nrf52840"
version = "0.1.0"
authors = ["Lukáš Poláček <lukas@polacek.email>"]
edition = "2024"
rust-version = { workspace = true }

[features]
default = []

[dependencies]

chrono = { workspace = true }
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5.0"

defmt = { workspace = true }
defmt-rtt = { version = "1.0", features = ["disable-blocking-mode"] }
embassy-boot-nrf = { workspace = true, features = ["defmt", "softdevice"] }
embassy-embedded-hal = { workspace = true }
embassy-executor = { workspace = true, features = ["platform-cortex-m", "defmt", "executor-interrupt"] }
embassy-futures = { workspace = true, features = ["defmt"] }
embassy-nrf = { workspace = true, features = ["defmt"] }
embassy-sync = { workspace = true, features = ["defmt"] }
embassy-time = { workspace = true, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { workspace = true, features = ["defmt"] }
embassy-usb-dfu = { workspace = true, features = ["defmt", "dfu"] }
heapless =  { workspace = true }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "47d6121c6e823120e8b883a7ac75f44ce7daa3aa", features = ["defmt", "nrf52840", "s140", "ble-peripheral", "critical-section-impl"] }
panic-probe = { version = "1.0", features = ["print-defmt"] }
postcard = { workspace = true }
sequential-storage = { workspace = true, features = ["defmt"] }
serde = { workspace = true }
static_cell = { workspace = true }
thiserror = { workspace = true }
yaroc-common = { workspace = true, features = ["defmt", "nrf"] }
