[package]
name = "yaroc-python"
version = "0.1.19"
edition = "2024"
rust-version = "1.93"

[features]
default = []

[build-dependencies]
walkdir = "2.3.2"

[dependencies]

chrono = { workspace = true, default-features = true }
clap = { workspace = true }
env_logger = { workspace = true }
embassy-time = { workspace = true }
femtopb = { workspace = true }
heapless = { workspace = true }
log = { workspace = true }
postcard = { workspace = true, features = ["use-std"] }
pyo3 = { version = "0.28", features = ["extension-module", "chrono", "abi3-py311"] }
pyo3-async-runtimes = { version = "0.28", features = ["attributes", "tokio-runtime"] }
pyo3-log = "0.13.0"
regex = "1.11"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true, default-features = true }
tokio.workspace = true
tokio-serial.workspace = true
toml = "1.0"
yaroc-common = { path = "../common", features = ["std"] }
yaroc-receiver = { path = "../receiver" }

[lib]
name = "yaroc_rs"
crate-type = ["cdylib", "rlib"]

[lints.clippy]
manual_range_contains = "allow"
