[package]
name = "yaroc-python"
version = "0.1.21"
edition = "2024"
rust-version = "1.96"

[features]
default = ["udev"]
udev = ["yaroc-receiver/udev"]

[build-dependencies]
walkdir = "2.3.2"

[dependencies]

chrono = { workspace = true, default-features = true }
clap = { workspace = true }
critical-section = { version = "1", features = ["std"] }
env_logger = { workspace = true }
embassy-time = { workspace = true }
femtopb = { workspace = true }
heapless = { workspace = true }
log = { workspace = true }
postcard = { workspace = true, features = ["use-std"] }
pyo3 = { version = "0.28", features = ["extension-module", "chrono", "abi3-py311", "experimental-async"] }

pyo3-log = "0.13.0"
regex = "1.11"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true, default-features = true }
tokio.workspace = true
tokio-serial.workspace = true
toml = "1.1"
futures = "0.3"
nusb = "0.2"
serialport = { version = "4.9", default-features = false }
yaroc-common = { path = "../common", features = ["std"] }
yaroc-receiver = { path = "../receiver", default-features = false }

[lib]
name = "yaroc_rs"
crate-type = ["cdylib", "rlib"]

[lints.clippy]
manual_range_contains = "allow"
