[package]
name = "yaroc-python"
version = "0.1.22-beta.2"
edition = "2024"
rust-version = { workspace = true }

[features]
default = ["udev"]
udev = ["yaroc-receiver/udev"]

[build-dependencies]
walkdir = "2.3.2"

[dependencies]

chrono = { workspace = true, default-features = true }
clap = { workspace = true }
critical-section = { version = "1", features = ["std"] }
embassy-time = { workspace = true }
env_logger = { workspace = true }
femtopb = { workspace = true }
futures = { workspace = true }
heapless = { workspace = true }
log = { workspace = true }
meshtastic = { workspace = true }
nusb = { workspace = true, features = ["tokio"] }
postcard = { workspace = true, features = ["use-std"] }
pyo3 = { version = "0.29", features = ["extension-module", "chrono", "abi3-py311", "experimental-async"] }

pyo3-log = "0.13.0"
regex = "1.11"
serde = { workspace = true, features = ["derive"] }
serialport = { workspace = true }
thiserror = { workspace = true, default-features = true }
tokio.workspace = true
tokio-serial.workspace = true
tokio-util = { workspace = true, features = ["io"] }
toml = "1.1"
yaroc-common = { workspace = true, features = ["std"] }
yaroc-receiver = { workspace = true }

[lib]
name = "yaroc_rs"
crate-type = ["cdylib", "rlib"]

[lints.clippy]
manual_range_contains = "allow"
