[project]
name = "yaroc"
version = "0.1.17b1"
authors = [
  {name = "Lukáš Poláček", email = "lukas@polacek.email" }
]
description = "Yet Another ROC, radio online control"
license = {file = "../LICENSE"}
keywords = ["sport", "orienteering", "split times", "online control", "radio control"]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  'aiohttp-retry==2.9.1',
  'aiohttp==3.12.*',
  'aiomqtt==2.4.*',
  'dbus-next==0.2.*; platform_system == "Linux"',
  'dependency-injector==4.48.*',
  'gpiozero==2.0.*',
  'pillow==11.3.*',
  'protobuf==5.29.*',
  'psutil==7.1.*',
  'pyserial-asyncio==0.6',
  'RPi.GPIO==0.7.1; platform_system == "Linux" and (platform_machine == "armv6l" or platform_machine == "armv7l" or platform_machine == "aarch64")',
  'usb-monitor>=1.17',
  'waveshare-epaper==1.2.0; platform_machine == "armv7l" or platform_machine == "aarch64"',
]

[project.optional-dependencies] # Optional
dev = [
  "ruff",
  "mypy",
  "pytest",
  "types-Pillow",
  "types-protobuf",
  "types-psutil",
]
lsp = [
  "ruff-lsp",
  "pylsp-mypy",
]

[project.scripts]
yarocd = "yaroc.scripts.yarocd:main"
send-punch = "yaroc.scripts.send_punch:main"

[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "."
module-name = "yaroc.rs"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
exclude = ["*_pb2.py", "*_pb2.pyi"]

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[[tool.mypy.overrides]]
module = "epaper.*,gpiozero.*,RPi.*,serial.*,serial_asyncio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "usbmonitor.*,pyudev.*"
ignore_missing_imports = true
