[package]
name = "yaroc-receiver"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[features]
default = []

[dependencies]
chrono = { workspace = true, features = ["clock", "alloc"] }
femtopb = { workspace = true }
futures = "0.3.31"
log = { workspace = true }
meshtastic = { workspace = true }
nusb = { version = "0.2", features = ["tokio"] }
prost = "0.14"
rumqttc = "0.25"
serialport = { version = "4", default-features = false }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-serial = { workspace = true }
tokio-util = { version = "0.7", features = ["time"] }
uuid = { version = "1.17.0", features = ["v4"] }
yaroc-common = { path = "../common", features = ["std"] }

[dev-dependencies]
clap = { workspace = true }
env_logger = { workspace = true }

[[example]]
name = "mqtt"

[[example]]
name = "usb_serial"
