[package]
name = "yaroc-receiver"
version = "0.1.0"
edition = "2024"
rust-version = { workspace = true }

[features]
default = ["udev"]
udev = ["dep:udev", "dep:tokio-udev"]

[dependencies]
chrono = { workspace = true, features = ["clock", "alloc"] }
femtopb = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
meshtastic = { workspace = true }
nusb = { workspace = true }
prost = "0.14"
rumqttc = "0.25"
serialport = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-serial = { workspace = true }
tokio-util = { workspace = true, features = ["time"] }
uuid = { version = "1.17.0", features = ["v4"] }
yaroc-common = { workspace = true, features = ["std"] }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-udev = { version = "0.10.0", optional = true }
udev = { version = "0.9", optional = true }

[dev-dependencies]
clap = { workspace = true }
env_logger = { workspace = true }

[[example]]
name = "mqtt"

[[example]]
name = "usb_serial"

[[example]]
name = "meshtastic_tcp"
