[package]
name = "yaroc_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
regex = "1.10.2"
serialport = "4.2.2"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tokio-serial = "5.4.4"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "yaroc_rs"
crate-type = ["cdylib"]
